Time: 226 ms (19.36%), Space: 122.9 MB (33.65%) - LeetHub